tests/ui/impl-trait/precise-capturing/bad-lifetimes.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bad-lifetimes.rs:4:31
   |
LL | fn no_elided_lt() -> impl use<'_> Sized {}
   |                               ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
LL | fn no_elided_lt() -> impl use<'static> Sized {}
   |                               ~~~~~~~

error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/bad-lifetimes.rs:11:29
   |
LL | fn missing_lt() -> impl use<'missing> Sized {}
   |              -              ^^^^^^^^ undeclared lifetime
   |              |
   |              help: consider introducing lifetime `'missing` here: `<'missing>`

warning: the feature `precise_capturing` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-lifetimes.rs:1:12
   |
LL | #![feature(precise_capturing)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123432 <https://github.com/rust-lang/rust/issues/123432> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: expected lifetime parameter in `use<...>` precise captures list, found `'_`
  --> $DIR/bad-lifetimes.rs:4:31
   |
LL | fn no_elided_lt() -> impl use<'_> Sized {}
   |                               ^^

error: expected lifetime parameter in `use<...>` precise captures list, found `'static`
  --> $DIR/bad-lifetimes.rs:8:28
   |
LL | fn static_lt() -> impl use<'static> Sized {}
   |                            ^^^^^^^

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0106, E0261.
For more information about an error, try `rustc --explain E0106`.
